testsuite/tests/interpreter_errors/wrong_member_ref_access/test.out
script.lkql:1:17: error: No such field
  1 | val ref = BinOp.f_not_a_field
    |                 ^^^^^^^^^^^^^
